@@ -1,3 +1,15 @@
+Mon Nov 23 17:06:25 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>
+
+        * dds/DCPS/transport/framework/TransportImpl.cpp:
+        * dds/DCPS/transport/framework/TransportInterface.h:
+        * dds/DdsDcpsGuid.idl:
+        * dds/monitor/SPMonitorImpl.cpp:
+        * dds/monitor/monitor.idl:
+        * tests/DCPS/Monitor/Messenger.mpc:
+
+          Cleanup some issues with the previous commit (mostly Windows
+          issues).
+
 Mon Nov 23 14:28:01 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>
 
         * dds/DCPS/DataReaderImpl.h:
